--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,10 +12,10 @@
 <h:body>
     <div id="header">
         <h1>
-            <span>Abulfatov</span>
-            Ruslan
+            <span>Ilin</span>
+            Alexander
         </h1>
-        <h2>P32312, var: 66647</h2>
+        <h2>P32316</h2>
     </div>
 
     <div class="form_block" id="time_wrapper">
