--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -15,10 +15,10 @@
 <h:body>
     <div id="header">
         <h1>
-            <span>Abulfatov</span>
-            Ruslan
+            <span>Ilin</span>
+            Alexander
         </h1>
-        <h2>P32312, var: 66647</h2>
+        <h2>P32316</h2>
     </div>
     <h:form prependId="false">
         <h:inputText id="bigTZ" style="visibility: hidden" value="#{model.timezoneOffset}">
