--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -83,7 +83,7 @@
                 </div>
                 <canvas width="400px" height="400px" id="graph">
                     <span>
-                        <h:graphicImage src="img/graph.png" alt="Task grpah" width="400" height="400"/>
+                        <h:graphicImage src="img/graph.png" alt="Task graph" width="400" height="400"/>
                     </span>
                 </canvas>
             </div>
@@ -121,6 +121,5 @@
             <h:commandButton styleClass="btnReturn" action="#{pageNavigation.goToIndex()}" value="Return to back"/>
         </h:form>
 
-    <img class="cat" src="/lab3_web-1.0-SNAPSHOT/resources/img/cat.gif" alt="pussy"/>
 </h:body>
 </html>
