--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -83,7 +83,7 @@
                 </div>
                 <canvas width="400px" height="400px" id="graph">
                     <span>
-                        <h:graphicImage src="img/graph.png" alt="Task graph" width="400" height="400"/>
+                        <h:graphicImage src="img/graph.png" alt="Task grpah" width="400" height="400"/>
                     </span>
                 </canvas>
             </div>
